crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_and_expression.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "update",
                ],
                condition: And(
                    [
                        FunctionCall {
                            name: "isAuthenticated",
                            args: [],
                        },
                        FunctionCall {
                            name: "hasRole",
                            args: [
                                StringLit(
                                    "seller",
                                ),
                            ],
                        },
                        FunctionCall {
                            name: "isOwner",
                            args: [
                                Path(
                                    "resource.seller_id",
                                ),
                            ],
                        },
                    ],
                ),
                validation: None,
            },
        ],
    },
}
