crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_basic_rules.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "read",
                ],
                condition: Bool(
                    true,
                ),
                validation: None,
            },
            SecurityRule {
                operations: [
                    "create",
                ],
                condition: FunctionCall {
                    name: "isAuthenticated",
                    args: [],
                },
                validation: None,
            },
        ],
    },
}
