crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_function_with_args.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "update",
                ],
                condition: FunctionCall {
                    name: "customCheck",
                    args: [
                        StringLit(
                            "admin",
                        ),
                        Number(
                            42.0,
                        ),
                        Path(
                            "resource.field",
                        ),
                    ],
                },
                validation: None,
            },
        ],
    },
}
