crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_nested_expressions.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "read",
                ],
                condition: Or(
                    [
                        And(
                            [
                                FunctionCall {
                                    name: "isAuthenticated",
                                    args: [],
                                },
                                FunctionCall {
                                    name: "hasRole",
                                    args: [
                                        StringLit(
                                            "seller",
                                        ),
                                    ],
                                },
                            ],
                        ),
                        FunctionCall {
                            name: "hasRole",
                            args: [
                                StringLit(
                                    "admin",
                                ),
                            ],
                        },
                    ],
                ),
                validation: None,
            },
        ],
    },
}
