crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_or_expression.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "delete",
                ],
                condition: Or(
                    [
                        FunctionCall {
                            name: "hasRole",
                            args: [
                                StringLit(
                                    "admin",
                                ),
                            ],
                        },
                        FunctionCall {
                            name: "hasRole",
                            args: [
                                StringLit(
                                    "super_admin",
                                ),
                            ],
                        },
                    ],
                ),
                validation: None,
            },
        ],
    },
}
