crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_validate_rules.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "products": RuleSet {
        collection: "products",
        rules: [
            SecurityRule {
                operations: [
                    "create",
                ],
                condition: Bool(
                    true,
                ),
                validation: Some(
                    Comparison {
                        left: Path(
                            "incoming.price",
                        ),
                        op: Gt,
                        right: Number(
                            0.0,
                        ),
                    },
                ),
            },
        ],
    },
}
