crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_parse_wildcard_rules.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: result
---
{
    "*": RuleSet {
        collection: "*",
        rules: [
            SecurityRule {
                operations: [
                    "read",
                ],
                condition: Bool(
                    true,
                ),
                validation: None,
            },
            SecurityRule {
                operations: [
                    "create",
                ],
                condition: FunctionCall {
                    name: "isAuthenticated",
                    args: [],
                },
                validation: None,
            },
        ],
    },
}
