crates/ob-handlers/tests/snapshots/snapshot_tests__snapshot_payment_status_all_variants.snap
---
source: crates/ob-handlers/tests/snapshot_tests.rs
expression: json
---
[
  "PENDING",
  "AUTHORIZED",
  "CAPTURED",
  "REFUNDED",
  "PARTIAL_REFUND",
  "FAILED",
  "CANCELLED",
  "DISPUTED"
]
